Fix for text overflow. Fix for answer form render without current_user. CSS fixes

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -14,7 +14,9 @@ body{
 
 h2, h3, h4{font-weight: normal;}
 
-p{font-size:12px}
+p{
+  font-size:12px;
+}
 
 .submit{
   background: #07C;
